fix chat css on mobile

--- a/frontend/src/assets/css/pages/_homepage.scss
+++ b/frontend/src/assets/css/pages/_homepage.scss
@@ -17,7 +17,8 @@
 .home-img{
     background-image: url('../imgs/home-img.jpg');
     width: 100%;
-    height: 80vh;  
+    height: 80vh;
+    height: calc(var(--vh,1vh) * 80 ); 
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -26,7 +27,8 @@
     justify-content: center;
     align-items: center;
     @media screen and (max-width: 640px) {
-        height: 55vh;  
+        height: 55vh;
+        height: calc(var(--vh,1vh) * 55 ); 
         .home-title-txt{
         	background: linear-gradient(to right, #99cc00 0%, #99cc00 20%);
             -webkit-background-clip: text;
@@ -43,6 +45,7 @@
     background-image: url('../imgs/home-img2.png');
     width: 100%;
     height: 80vh;  
+    height: calc(var(--vh,1vh) * 80 ); 
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -51,8 +54,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    
     @media screen and (max-width: 640px) {
         height: 55vh;  
+        height: calc(var(--vh,1vh) * 55 ); 
     }
 }
 .home-title-txt{
